# diff-integrator

./: .coverage  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
algorithmic_improvements/: index.html
api/cd_and_cryoem/: index.html
api/geometry/: index.html
api/loss/: index.html
api/nmr/: index.html
api/optimizer/: index.html
api/saxs/: index.html
api/schedules/: index.html
benchmarks/: benchmark_2KJR_cartesian.py  benchmark_2KZV.py  benchmark_GmR58A.py  benchmark_HR2876B.py  benchmark_HR2876B_cartesian.py
concepts/: index.html
diff_integrator/: __init__.py  loss.py  optimizer.py  schedules.py
diff_integrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diff_integrator/terms/: __init__.py  bond_geometry.py  chemical_shifts.py  chirality.py  geometry.py  nmr.py  noe.py  ramachandran.py  saxs.py
docs/: algorithmic_improvements.md  concepts.md  index.md  theory.md  use_cases.md
docs/api/: cd_and_cryoem.md  geometry.md  loss.md  nmr.md  optimizer.md  saxs.md  schedules.md
examples/: precompute_viz_data.py  visualize_benchmarks.ipynb
search/: search_index.json
tests/: test_annealing_integration.py  test_bond_geometry.py  test_chemical_shifts.py  test_chirality.py  test_e2e_nmr_science.py  test_e2e_saxs_science.py  test_geometry_loss.py  test_loss.py  test_nmr_loss.py  test_noe_loss.py  test_optimizer.py  test_ramachandran_extras.py  test_ramachandran_loss.py  test_saxs_loss.py  test_schedules.py
theory/: index.html
use_cases/: index.html
(+53 files in other folders)
