[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-integrator"
version = "0.1.0"
description = "Integrative Refinement Engine using differentiable forward models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "George Elkins"}]
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "diff-biophys",
    "numpy",
    "biotite",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["diff_integrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "N806", "N803", "N802"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
exclude = ["^benchmarks/"]

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "numpy.*",
    "optax.*",
    "biotite.*",
    "diff_biophys.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "benchmarks.*"]
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
